--- a/（北京）PM2.5值预测.ipynb
+++ b/（北京）PM2.5值预测.ipynb
@@ -4,8 +4,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# PM2.5预测\n",
-    "**昨天已经用（北京）历史24小时即08/07日22时-08/0821时共24小时数据对LinearRegression模型进行了训练，今天先来采集新生成的数据做测试数据集，由于已经过去了12个小时，所以共有12组数据可用**"
+    "# 北京市空气PM2.5值预测\n",
+    "\n",
+    "## 一、分析目标\n",
+    "**通过北京市历史24小时天气数据，预测之后12小时天气数据中PM2.5的值**\n",
+    "\n",
+    "## 二、项目背景\n",
+    "\n",
+    "**在北京，冬天最令人头疼的就是雾霾问题，每当雾霾天气来临，那种灰蒙蒙的空气和将口鼻掩盖在厚厚的口罩下呼吸困难的感觉，让人情绪低落。而雾霾的罪魁祸首就是PM2.5。**\n",
+    "\n",
+    "**本次分析主要是想要使用线性回归模型对PM2.5值进行预测**\n",
+    "\n",
+    "**昨天已经用（北京）历史24小时即08/07日22时-08/0821时共24小时数据对LinearRegression模型进行了训练，今天先来采集新生成的数据做测试数据集，由于已经过去了12个小时，所以共有12组数据可用**\n",
+    "\n",
+    "## 三 数据来源\n",
+    "\n",
+    "**本次分析数据来自心知天气网，该网站可以通过Restful风格URL直接获取Json格式气象和大气数据，获取方式较简单。**\n",
+    "\n",
+    "## 四 数据分析及预测\n",
+    "\n",
+    "### 1. 数据规整"
    ]
   },
   {
@@ -469,6 +487,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 2.生成训练数据集合测试数据集\n",
     "**数据备份，生成训练数据集和测试数据集**"
    ]
   },
@@ -670,7 +689,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**再来试试领回归模型**"
+    "**再来试试岭回归模型**"
    ]
   },
   {
@@ -881,7 +900,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 最终还是普通线性回归模型效果稍好"
+    "## 五、结论\n",
+    "**预测值有一定偏差，但基本反映了变化趋势。进过几个模型的筛选，最终还是普通线性回归模型效果稍好。**"
    ]
   },
   {
